tests/specs/ecosystem/std/expect/0_209_0.test
std/expect/0.209.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /fn.ts:7:17
  | 
7 | export function fn(...stubs: Function[]) {
  |                 ^^ this function is missing an explicit return type
  | 
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


